# ros2_lane_detection

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lane_detection_all/lib/lane_detection_all/: detection_node
install/lane_detection_all/share/lane_detection_all/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lane_msgs/include/lane_msgs/lane_msgs/msg/: lane_info.hpp
install/lane_msgs/include/lane_msgs/lane_msgs/msg/detail/: lane_info__functions.c  lane_info__rosidl_typesupport_fastrtps_cpp.hpp  lane_info__rosidl_typesupport_introspection_c.h  lane_info__struct.h  lane_info__type_support.cpp  lane_info__type_support.h
install/lane_msgs/local/lib/python3.10/dist-packages/lane_msgs/: _lane_msgs_s.ep.rosidl_typesupport_fastrtps_c.c
install/lane_msgs/local/lib/python3.10/dist-packages/lane_msgs/msg/: _lane_info_s.c
install/lane_msgs/share/lane_msgs/: local_setup.sh  package.bash  package.sh  package.xml  package.zsh
install/lane_msgs/share/lane_msgs/cmake/: export_lane_msgs__rosidl_generator_cExport.cmake  export_lane_msgs__rosidl_generator_cppExport.cmake  export_lane_msgs__rosidl_generator_pyExport.cmake  export_lane_msgs__rosidl_typesupport_fastrtps_cExport.cmake  lane_msgsConfig.cmake  lane_msgs__rosidl_typesupport_cExport.cmake  lane_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/lane_msgs/share/lane_msgs/msg/: LaneInfo.msg
log/: latest_build
src/lane_detection_all/: package.xml  setup.cfg  setup.py
src/lane_msgs/: CMakeLists.txt
